--- a/api-gateway-service/src/main/resources/application.yml
+++ b/api-gateway-service/src/main/resources/application.yml
@@ -24,14 +24,15 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: https://discovery-server-5iwb.onrender.com/eureka/
-    register-with-eureka: true
-    fetch-registry: true
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+      register-with-eureka: true
+      fetch-registry: true
 
 # Optional but helpful
   instance:
-    hostname: api-gateway-service-myx7.onrender.com
-    prefer-ip-address: false
+    prefer-ip-address: true
+#    ip-address: ${CLOUD_PUBLIC_IP}  # Optional, set this only if you're injecting an external IP
+    instance-id: ${spring.application.name}:${random.value}
 
 logging:
   level:
