--- a/api-gateway-service/src/main/resources/application.yml
+++ b/api-gateway-service/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+      defaultZone: https://eureka.sameerbiradar.xyz/eureka/
       register-with-eureka: true
       fetch-registry: true
 
